--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ionic/core": "^7.2.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
+    "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "konsta": "^2.0.0",
     "next": "13.4.12",
+    "overlayscrollbars": "^2.2.1",
+    "overlayscrollbars-react": "^0.5.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router": "5.3.4",
+    "react-router-dom": "5.3.4",
+    "react-virtuoso": "^4.4.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
