--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "ionicons": "^7.1.2",
     "konsta": "^2.0.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
