--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "vercel-build": "NEXTJS_IGNORE_TYPECHECK=1 NEXTJS_IGNORE_ESLINT=1 next build",
+    "vercel-build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,14 +17,26 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.15.0",
+    "ionicons": "^7.1.2",
     "konsta": "^2.0.0",
     "next": "13.4.12",
+    "overlayscrollbars": "^2.2.1",
+    "overlayscrollbars-react": "^0.5.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image": "^4.1.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
+    "react-virtuoso": "^4.4.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.9.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
