--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@ionic/core": "^7.2.1",
-    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
@@ -20,7 +19,6 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
-    "ionicons": "^7.1.2",
     "konsta": "^2.0.0",
     "lodash-es": "^4.17.21",
     "lottie-react": "^2.4.0",
@@ -33,10 +31,9 @@
     "react-image": "^4.1.0",
     "react-loading-skeleton": "^3.3.1",
     "react-responsive": "^9.0.2",
-    "react-router": "5.3.4",
-    "react-router-dom": "5.3.4",
     "react-virtuoso": "^4.4.2",
     "tailwindcss": "3.3.3",
+    "tua-body-scroll-lock": "^1.4.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
