--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@capacitor/core": "^5.2.2",
+    "@ducanh2912/next-pwa": "^9.4.0",
     "@ionic/core": "^7.2.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "20.4.5",
@@ -22,7 +24,7 @@
     "konsta": "^2.0.0",
     "lodash-es": "^4.17.21",
     "lottie-react": "^2.4.0",
-    "next": "13.4.12",
+    "next": "13.4.13",
     "overlayscrollbars": "^2.2.1",
     "overlayscrollbars-react": "^0.5.1",
     "postcss": "8.4.27",
