--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
+    "immer": "^10.0.2",
     "konsta": "^2.0.0",
     "lodash-es": "^4.17.21",
     "lottie-react": "^2.4.0",
@@ -36,7 +37,8 @@
     "react-virtuoso": "^4.4.2",
     "tailwindcss": "3.3.3",
     "tua-body-scroll-lock": "^1.4.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.9.0",
