--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "tailwindcss": "3.3.3",
     "tua-body-scroll-lock": "^1.4.0",
     "typescript": "5.1.6",
-    "use-immer": "^0.9.0"
+    "use-immer": "^0.9.0",
+    "use-local-storage-state": "^18.3.3"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.9.0",
